// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogViewer does not linkify non http/https urls 1`] = `
<div
  class="line"
>
  <span
    class="number"
  >
    1
  </span>
  <span
    class="line"
  >
    <span>
      <span>
        this string: gs://path is a GCS path
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer linkifies standalone https urls 1`] = `
<div
  class="line"
>
  <span
    class="number"
  >
    1
  </span>
  <span
    class="line"
  >
    <span>
      <span>
        this string: 
      </span>
    </span>
    <span>
      <a
        class="a"
        href="https://path.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        https://path.com
      </a>
    </span>
    <span>
      <span>
         is a url
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer linkifies standalone urls 1`] = `
<div
  class="line"
>
  <span
    class="number"
  >
    1
  </span>
  <span
    class="line"
  >
    <span>
      <span>
        this string: 
      </span>
    </span>
    <span>
      <a
        class="a"
        href="http://path.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        http://path.com
      </a>
    </span>
    <span>
      <span>
         is a url
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer linkifies substring urls 1`] = `
<div
  class="line"
>
  <span
    class="number"
  >
    1
  </span>
  <span
    class="line"
  >
    <span>
      <span>
        this string:
      </span>
    </span>
    <span>
      <a
        class="a"
        href="http://path.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        http://path.com
      </a>
    </span>
    <span>
      <span>
         is a url
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer renders a multi-line log 1`] = `
<div
  class="line"
>
  <span
    class="number"
  >
    1
  </span>
  <span
    class="line"
  >
    <span>
      <span>
        Lorem Ipsum is simply dummy text of the printing and typesetting
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer renders a row with error 1`] = `
<div
  class="line"
>
  <span
    class="number"
    style="background-color: rgb(112, 0, 0); color: white;"
  >
    1
  </span>
  <span
    class="line"
    style="background-color: rgb(112, 0, 0); color: white;"
  >
    <span>
      <span>
        line1 with error
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer renders a row with error word as substring 1`] = `
<div
  class="line"
>
  <span
    class="number"
    style="background-color: rgb(112, 0, 0); color: white;"
  >
    1
  </span>
  <span
    class="line"
    style="background-color: rgb(112, 0, 0); color: white;"
  >
    <span>
      <span>
        line1 with errorWord
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer renders a row with given index as line number 1`] = `
<div
  class="line"
>
  <span
    class="number"
  >
    1
  </span>
  <span
    class="line"
  >
    <span>
      <span>
        line1
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer renders a row with upper case error 1`] = `
<div
  class="line"
>
  <span
    class="number"
    style="background-color: rgb(112, 0, 0); color: white;"
  >
    1
  </span>
  <span
    class="line"
    style="background-color: rgb(112, 0, 0); color: white;"
  >
    <span>
      <span>
        line1 with ERROR
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer renders a row with upper case warning 1`] = `
<div
  class="line"
>
  <span
    class="number"
    style="background-color: rgb(84, 84, 0); color: white;"
  >
    1
  </span>
  <span
    class="line"
    style="background-color: rgb(84, 84, 0); color: white;"
  >
    <span>
      <span>
        line1 with WARNING
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer renders a row with warn 1`] = `
<div
  class="line"
>
  <span
    class="number"
    style="background-color: rgb(84, 84, 0); color: white;"
  >
    1
  </span>
  <span
    class="line"
    style="background-color: rgb(84, 84, 0); color: white;"
  >
    <span>
      <span>
        line1 with warn
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer renders a row with warning 1`] = `
<div
  class="line"
>
  <span
    class="number"
    style="background-color: rgb(84, 84, 0); color: white;"
  >
    1
  </span>
  <span
    class="line"
    style="background-color: rgb(84, 84, 0); color: white;"
  >
    <span>
      <span>
        line1 with warning
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer renders a row with warning word as substring 1`] = `
<div
  class="line"
>
  <span
    class="number"
    style="background-color: rgb(84, 84, 0); color: white;"
  >
    1
  </span>
  <span
    class="line"
    style="background-color: rgb(84, 84, 0); color: white;"
  >
    <span>
      <span>
        line1 with warning:something
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer renders an empty container when no logs passed 1`] = `
<AutoSizer
  disableHeight={false}
  disableWidth={false}
  onResize={[Function]}
  style={Object {}}
>
  <Component />
</AutoSizer>
`;

exports[`LogViewer renders one log line 1`] = `
<div
  class="line"
>
  <span
    class="number"
  >
    1
  </span>
  <span
    class="line"
  >
    <span>
      <span>
        first line
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer renders one long line without breaking 1`] = `
<div
  class="line"
>
  <span
    class="number"
  >
    1
  </span>
  <span
    class="line"
  >
    <span>
      <span>
        Lorem Ipsum is simply dummy text of the printing and typesettingindustry. Lorem Ipsum has been the industry's standard dummy text eversince the 1500s, when an unknown printer took a galley of type andscrambled it to make a type specimen book. It has survived not only fivecenturies, but also the leap into electronic typesetting, remainingessentially unchanged. It was popularised in the 1960s with the releaseof Letraset sheets containing Lorem Ipsum passages, and more recentlywith desktop publishing software like Aldus PageMaker including versionsof Lorem Ipsum.
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer renders two log lines 1`] = `
<div
  class="line"
>
  <span
    class="number"
  >
    1
  </span>
  <span
    class="line"
  >
    <span>
      <span>
        first line
      </span>
    </span>
  </span>
</div>
`;
